// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyStatusTab container test renders as expected 1`] = `
<div
  className="pf-c-page"
>
  <main
    className="pf-c-page__main"
    tabIndex={-1}
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <div
        className="pf-l-split pf-m-gutter"
      >
        <div
          className="pf-l-split__item pf-m-fill"
        >
          <div
            className="pf-l-stack pf-m-gutter"
          >
            <div
              className="pf-l-stack__item"
            >
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <a
                      className="pf-c-breadcrumb__link"
                      href=""
                      onClick={[Function]}
                    >
                      Policies
                    </a>
                  </li>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                    />
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="pf-l-stack__item"
            >
              <div
                className="pf-c-content"
              >
                <h1
                  className="pf-c-title pf-m-2xl"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="pf-l-split__item"
        >
          <div
            className="pf-l-stack pf-m-gutter"
          >
            <div
              className="pf-l-stack__item"
              style={
                Object {
                  "alignItems": "flex-end",
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <div
                className="makeStyles-container-1"
              >
                <div
                  aria-label="refresh-icon"
                  className="makeStyles-reloadButton-2"
                  id="refresh-icon"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    className="makeStyles-icon-4"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"
                    />
                  </svg>
                </div>
                <div
                  aria-label="refetch-intervals"
                  className="pf-c-dropdown makeStyles-buttonTitle-3"
                  data-ouia-component-id="OUIA-Generated-Dropdown-2"
                  data-ouia-component-type="PF4/Dropdown"
                  data-ouia-safe={true}
                  id="refresh-dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="refresh-label"
                    className="pf-c-dropdown__toggle pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
                    data-ouia-component-type="PF4/DropdownToggle"
                    data-ouia-safe={true}
                    disabled={false}
                    id="refresh-toggle"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="pf-c-dropdown__toggle-text"
                    >
                      Refresh every 10s
                    </span>
                    <span
                      className="pf-c-dropdown__toggle-icon"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="makeStyles-timestamp-5"
              >
                <span
                  aria-valuetext="Loading..."
                  className="pf-c-spinner pf-m-sm"
                  role="progressbar"
                >
                  <span
                    className="pf-c-spinner__clipper"
                  />
                  <span
                    className="pf-c-spinner__lead-ball"
                  />
                  <span
                    className="pf-c-spinner__tail-ball"
                  />
                </span>
                <p>
                  Last update: 
                  Invalid date
                </p>
              </div>
              <button
                aria-disabled={true}
                aria-label={null}
                className="pf-c-button pf-m-primary pf-m-aria-disabled"
                data-ouia-component-id="OUIA-Generated-Button-primary-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                id="edit-policy"
                onClick={[Function]}
                onKeyPress={[Function]}
                role={null}
                tabIndex={null}
                type="button"
              >
                Edit policy
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      style={
        Object {
          "borderTop": "thin solid #00000022",
        }
      }
    >
      <section
        className="pf-c-page__main-nav pf-m-light"
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <nav
          aria-label="Local"
          className="pf-c-nav pf-m-horizontal pf-m-tertiary"
          data-ouia-component-id="OUIA-Generated-Nav-tertiary-2"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe={true}
        >
          <button
            aria-label="Scroll left"
            className="pf-c-nav__scroll-button"
            disabled={false}
            onClick={[Function]}
            tabIndex={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
          <ul
            className="pf-c-nav__list"
            onScroll={[Function]}
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <a
                aria-current={null}
                className="pf-c-nav__link"
                onClick={[Function]}
                tabIndex={null}
              >
                Details
              </a>
            </li>
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <a
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                onClick={[Function]}
                tabIndex={null}
              >
                Status
              </a>
            </li>
          </ul>
          <button
            aria-label="Scroll right"
            className="pf-c-nav__scroll-button"
            disabled={false}
            onClick={[Function]}
            tabIndex={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </nav>
      </section>
    </div>
    <span
      aria-valuetext="Loading..."
      className="pf-c-spinner pf-m-xl patternfly-spinner"
      role="progressbar"
    >
      <span
        className="pf-c-spinner__clipper"
      />
      <span
        className="pf-c-spinner__lead-ball"
      />
      <span
        className="pf-c-spinner__tail-ball"
      />
    </span>
  </main>
</div>
`;

exports[`PolicyStatusTab container test renders as expected with access 1`] = `
<div
  className="pf-c-page"
>
  <main
    className="pf-c-page__main"
    tabIndex={-1}
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <div
        className="pf-l-split pf-m-gutter"
      >
        <div
          className="pf-l-split__item pf-m-fill"
        >
          <div
            className="pf-l-stack pf-m-gutter"
          >
            <div
              className="pf-l-stack__item"
            >
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <a
                      className="pf-c-breadcrumb__link"
                      href=""
                      onClick={[Function]}
                    >
                      Policies
                    </a>
                  </li>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                    </span>
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                    />
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="pf-l-stack__item"
            >
              <div
                className="pf-c-content"
              >
                <h1
                  className="pf-c-title pf-m-2xl"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="pf-l-split__item"
        >
          <div
            className="pf-l-stack pf-m-gutter"
          >
            <div
              className="pf-l-stack__item"
              style={
                Object {
                  "alignItems": "flex-end",
                  "display": "flex",
                  "flexDirection": "column",
                }
              }
            >
              <div
                className="makeStyles-container-1"
              >
                <div
                  aria-label="refresh-icon"
                  className="makeStyles-reloadButton-2"
                  id="refresh-icon"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    className="makeStyles-icon-4"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"
                    />
                  </svg>
                </div>
                <div
                  aria-label="refetch-intervals"
                  className="pf-c-dropdown makeStyles-buttonTitle-3"
                  data-ouia-component-id="OUIA-Generated-Dropdown-1"
                  data-ouia-component-type="PF4/Dropdown"
                  data-ouia-safe={true}
                  id="refresh-dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="refresh-label"
                    className="pf-c-dropdown__toggle pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                    data-ouia-component-type="PF4/DropdownToggle"
                    data-ouia-safe={true}
                    disabled={false}
                    id="refresh-toggle"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="pf-c-dropdown__toggle-text"
                    >
                      Refresh every 10s
                    </span>
                    <span
                      className="pf-c-dropdown__toggle-icon"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="makeStyles-timestamp-5"
              >
                <span
                  aria-valuetext="Loading..."
                  className="pf-c-spinner pf-m-sm"
                  role="progressbar"
                >
                  <span
                    className="pf-c-spinner__clipper"
                  />
                  <span
                    className="pf-c-spinner__lead-ball"
                  />
                  <span
                    className="pf-c-spinner__tail-ball"
                  />
                </span>
                <p>
                  Last update: 
                  Invalid date
                </p>
              </div>
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                id="edit-policy"
                onClick={[Function]}
                role={null}
                type="button"
              >
                Edit policy
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      style={
        Object {
          "borderTop": "thin solid #00000022",
        }
      }
    >
      <section
        className="pf-c-page__main-nav pf-m-light"
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <nav
          aria-label="Local"
          className="pf-c-nav pf-m-horizontal pf-m-tertiary"
          data-ouia-component-id="OUIA-Generated-Nav-tertiary-1"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe={true}
        >
          <button
            aria-label="Scroll left"
            className="pf-c-nav__scroll-button"
            disabled={false}
            onClick={[Function]}
            tabIndex={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
          <ul
            className="pf-c-nav__list"
            onScroll={[Function]}
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <a
                aria-current={null}
                className="pf-c-nav__link"
                onClick={[Function]}
                tabIndex={null}
              >
                Details
              </a>
            </li>
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
            >
              <a
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                onClick={[Function]}
                tabIndex={null}
              >
                Status
              </a>
            </li>
          </ul>
          <button
            aria-label="Scroll right"
            className="pf-c-nav__scroll-button"
            disabled={false}
            onClick={[Function]}
            tabIndex={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </nav>
      </section>
    </div>
    <span
      aria-valuetext="Loading..."
      className="pf-c-spinner pf-m-xl patternfly-spinner"
      role="progressbar"
    >
      <span
        className="pf-c-spinner__clipper"
      />
      <span
        className="pf-c-spinner__lead-ball"
      />
      <span
        className="pf-c-spinner__tail-ball"
      />
    </span>
  </main>
</div>
`;
